# DeLOG

./: .gitignore  .gitmodules  AGENTS.md  BUGS.md  CLAUDE.md  Cargo.toml  LICENSE.md  PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
assets/: README.md  palette.rs
assets/models/: QuadCopter.glb
assets/shaders/: grid3d.wgsl  line_pull.wgsl  mesh.wgsl  minmax_col.wgsl  scatter_pull.wgsl  step_pull.wgsl  traj3d.wgsl
crates/delog-app/: Cargo.toml  build.rs
crates/delog-app/src/: about.rs  app.rs  axes.rs  browser.rs  camera.rs  csv_export.rs  diagnostics.rs  field_stats.rs  generate_markers.rs  geo.rs  gpu.rs  hover.rs  icons.rs  layout.rs  legend.rs  live.rs  main.rs  markers.rs  models.rs  parsers.rs  performance.rs  plot.rs  scripts.rs  session.rs  settings.rs  text_overlay.rs  theme.rs  timeline.rs  vehicle.rs  vehicle_dialog.rs  workspace.rs
crates/delog-app/tests/: legend_policy.rs  popup_policy.rs  readout_layer_policy.rs
crates/delog-cache/: Cargo.toml
crates/delog-cache/benches/: cache.rs
crates/delog-cache/src/: lib.rs  manager.rs  pyramid.rs  trace.rs
crates/delog-core/: Cargo.toml
crates/delog-core/benches/: snapshot_swap.rs  visible_stats.rs
crates/delog-core/src/: analysis.rs  chunk.rs  diagnostics.rs  export.rs  field_view.rs  identity.rs  ingest.rs  ingestor.rs  lib.rs  mem.rs  metrics.rs  parse_ctl.rs  quality.rs  schema.rs  snapshot.rs  store.rs  time.rs
crates/delog-core/tests/: export_props.proptest-regressions  export_props.rs  properties.rs
crates/delog-parsers/: Cargo.toml
crates/delog-parsers/benches/: ulog.rs
crates/delog-parsers/examples/: parse_bin.rs  parse_ulog.rs
crates/delog-parsers/src/: ardupilot.rs  lib.rs  mavlink.rs  parser.rs  tlog.rs  ulog.rs
crates/delog-parsers/tests/: garbage_smoke.rs
crates/delog-render/: Cargo.toml
crates/delog-render/benches/: frame_encode.rs
crates/delog-render/examples/: render_grid.rs
crates/delog-render/src/: buffers.rs  context.rs  errors.rs  grid3d.rs  lib.rs  line.rs  mesh.rs  minmax.rs  palette.rs  scatter.rs  scene_target.rs  step.rs  target.rs  traj3d.rs  uniforms.rs
crates/delog-script/: Cargo.toml
crates/delog-script/benches/: custom_parser.rs
crates/delog-script/src/: api.rs  custom_parser.rs  emit.rs  engine.rs  lib.rs  library.rs  live.rs  parser_library.rs
crates/delog-script/tests/: golden_accel_mag.rs  golden_custom_parser.rs  golden_live_nav_transform.rs
crates/delog-stream/: Cargo.toml
crates/delog-stream/benches/: sustained_live.rs
crates/delog-stream/src/: lib.rs  live.rs  reader.rs  recorder.rs
docs/: custom_parsers.md  scripting.md
docs/superpowers/plans/: 2026-06-13-python-scripting.md  2026-06-13-settings-fps-render-mode.md  2026-06-13-settings-separate-from-layout.md  2026-06-14-live-python-transforms.md  2026-06-17-ana-05-manual-markers.md  2026-06-19-ana-02-visible-window-stats.md  2026-06-19-centered-non-collapsible-popups.md  2026-06-19-readout-popup-z-order.md  2026-06-20-custom-python-parsers.md
docs/superpowers/specs/: 2026-06-13-python-scripting-design.md  2026-06-13-settings-fps-render-mode-design.md  2026-06-13-settings-separate-from-layout-design.md  2026-06-14-live-python-transforms-design.md  2026-06-17-ana-05-manual-markers-design.md  2026-06-17-ana-11-generate-markers-design.md  2026-06-17-plt-15-text-annotation-traces-design.md  2026-06-19-ana-02-visible-window-stats-design.md  2026-06-19-centered-non-collapsible-popups-design.md  2026-06-19-readout-popup-z-order-design.md  2026-06-20-custom-python-parsers-design.md
fixtures/layouts/: v1_basic.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bin_record.rs  mavlink_framing.rs  ulog_defs_data.rs
fuzz/src/: lib.rs
memory/: public-release-cleanup.md
scripts/: nav_controller_live_rad.py  nav_controller_output_radians.py  vehicle_attitude_euler.py
