[workspace]
resolver = "3"
members = [
  "crates/delog-core",
  "crates/delog-parsers",
  "crates/delog-stream",
  "crates/delog-cache",
  "crates/delog-render",
  "crates/delog-app",
  "crates/delog-script",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HmZyy/DeLOG"
rust-version = "1.92"

# Pin philosophy (PLAN.md §2): every third-party version is pinned here, once;
# member crates inherit with `workspace = true`. Cargo.lock is committed.
[workspace.dependencies]
# intra-workspace
delog-core = { path = "crates/delog-core" }
delog-parsers = { path = "crates/delog-parsers" }
delog-stream = { path = "crates/delog-stream" }
delog-cache = { path = "crates/delog-cache" }
delog-render = { path = "crates/delog-render" }
delog-script = { path = "crates/delog-script" }

# columnar data
arrow = "59.0.0"
arrow-ipc = "59.0.0"

# GUI / GPU
egui = "0.34.3"
eframe = { version = "0.34.3", default-features = false, features = [
  "wgpu",
  "default_fonts",
  "wayland",
  "x11",
] }
egui-wgpu = "0.34.3"
egui_extras = { version = "0.34.3", default-features = false, features = ["svg"] }
egui_tiles = "0.15.0"
rfd = "0.17.2"
wgpu = "29.0.3"
bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = "0.4.0"

# telemetry I/O
mavlink = { version = "0.18.0", default-features = false, features = [
  "dialect-all",
  "serde",
  "std",
] }
serialport = "4.9.0"

# 3D models
gltf = "1.4.1"

# 3D math (cameras, GPS→NED, quaternions)
glam = "0.30.10"

# concurrency
arc-swap = "1.9.1"
crossbeam-channel = "0.5.15"
rayon = "1.12.0"

# persistence
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
memmap2 = "0.9.10"
same-file = "1.0.6"
rustix = { version = "1.1.4", features = ["fs"] }
windows-sys = "0.61.2"

# errors / logging
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# scripting (optional; behind feature flags — PLAN.md §17.3, SCR-*)
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
numpy = "0.29.0"
egui_code_editor = "0.3.3"

# testing / benchmarking
criterion = "0.8.2"
proptest = "1.11.0"
png = "0.18.1"
