[package]
name = "delog-app"
description = "DeLOG — drone flight log & live telemetry analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "delog"
path = "src/main.rs"

[dependencies]
delog-core = { workspace = true }
delog-parsers = { workspace = true }
delog-stream = { workspace = true }
delog-cache = { workspace = true }
delog-render = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
egui_tiles = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Test fixtures build Arrow arrays directly; production app code never does (§3.2).
arrow = { workspace = true }
