[package]
name = "delog-app"
description = "DeLOG — drone flight log & live telemetry analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "delog"
path = "src/main.rs"

[features]
# Embedded-Python scripting (PLAN.md §17.3, SCR-*) is ON by default. Build
# without Python via `--no-default-features` (Cargo features are additive, so a
# literal "without-scripting" feature cannot subtract — disabling the default is
# the opt-out).
default = ["scripting"]
scripting = ["dep:delog-script", "delog-script/python", "dep:egui_code_editor"]

[dependencies]
delog-core = { workspace = true }
delog-parsers = { workspace = true }
delog-stream = { workspace = true }
delog-cache = { workspace = true }
delog-render = { workspace = true }
delog-script = { workspace = true, optional = true }
egui_code_editor = { workspace = true, optional = true }

bytemuck = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_tiles = { workspace = true }
glam = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Test fixtures build Arrow arrays directly; production app code never does (§3.2).
arrow = { workspace = true }
