[package]
name = "delog-app"
description = "DeLOG — drone flight log & live telemetry analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "delog"
path = "src/main.rs"

# `docs/logo.png` is decoded + resized to 256x256 at build time and embedded as
# the runtime window icon. It is not compiled into the .exe as a resource icon.
[build-dependencies]
image = { workspace = true }

[features]
# Embedded-Python scripting is ON by default. Build without Python via
# `--no-default-features` (Cargo features are additive, so a literal
# "without-scripting" feature cannot subtract — disabling the default is the
# opt-out).
default = ["scripting"]
scripting = ["dep:delog-script", "delog-script/python", "dep:egui_code_editor"]

[dependencies]
arrow = { workspace = true }
delog-core = { workspace = true }
delog-parsers = { workspace = true }
delog-stream = { workspace = true }
delog-cache = { workspace = true }
delog-render = { workspace = true }
delog-script = { workspace = true, optional = true }
egui_code_editor = { workspace = true, optional = true }

bytemuck = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_tiles = { workspace = true }
glam = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
