[package]
name = "delog-core"
description = "IDs & keys, time model, columnar store, snapshots, chunk stats, diagnostics types, metrics registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "snapshot_swap"
harness = false
