[package]
name = "delog-parsers"
description = "Format sniffing + ULog / ArduPilot BIN / tlog log parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
delog-core = { workspace = true }
arrow = { workspace = true }
mavlink = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ulog"
harness = false
