[package]
name = "delog-render"
description = "Pure-wgpu renderer: pipelines, buffer manager, 2D plot pass, 3D scene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
delog-core = { workspace = true }
delog-cache = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
# Bench fixtures build TraceCaches from Arrow snapshots; production render code
# never touches Arrow.
arrow = { workspace = true }
# Golden-image tests build camera matrices to drive the grid pipeline; the
# production pipeline takes raw `[[f32; 4]; 4]` matrices, so render code stays
# math-library-free.
glam = { workspace = true }
# Visual-verification examples encode the headless render to PNG.
png = { workspace = true }

[[bench]]
name = "frame_encode"
harness = false
