[package]
name = "delog-script"
description = "DeLOG — optional embedded-Python scripting for derived fields"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Pulls in the embedded CPython interpreter + numpy. OFF by default so
# `cargo build --workspace` needs no Python toolchain (PLAN.md §17.3).
python = ["dep:pyo3", "dep:numpy", "dep:arrow"]

[dependencies]
delog-core = { workspace = true }
same-file = { workspace = true }
rustix = { workspace = true }

pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "custom_parser"
harness = false
required-features = ["python"]
